Set dark body background in dark mode to prevent white flicker when resizing

--- a/src/css/base.sass
+++ b/src/css/base.sass
@@ -7,6 +7,8 @@ html, body
     height: 100%
     font-size: 12px
     overscroll-behavior-y: none
+    +dark-mode
+        background: #252B37
 
 input, button
     font-family: "Open Sans"
